# einvoice-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SKILL.md  pyproject.toml  render.yaml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  Dockerfile.kosit  docker-compose.yml
docs/: DEPLOYMENT.md  GERMAN_COMPLIANCE_GUIDE.md
src/einvoice_mcp/: __init__.py  __main__.py  config.py  errors.py  models.py  server.py
src/einvoice_mcp/models/: __init__.py  enums.py  invoice.py  line_items.py  party.py  results.py
src/einvoice_mcp/prompts/: __init__.py  guides.py  guides_additional.py  guides_advanced.py
src/einvoice_mcp/resources/: __init__.py  compliance_data.py  reference_data.py  reference_data_advanced.py  schemas.py
src/einvoice_mcp/services/: cii_extractors.py  invoice_builder.py  invoice_data_builder.py  kosit.py  pdf_generator.py  xml_parser.py
src/einvoice_mcp/tools/: arithmetic_checks.py  compliance.py  compliance_checks.py  generate.py  parse.py  validate.py
tests/: conftest.py
tests/fixtures/: sample_xrechnung.xml
tests/integration/: test_kosit_integration.py
tests/unit/: test_compliance.py  test_compliance_tools.py  test_comprehensive.py  test_generate_tools.py  test_invoice_builder.py  test_kosit_client.py  test_models.py  test_pdf_generator.py  test_security.py  test_server_helpers.py  test_tools.py  test_validate_tools.py  test_xml_parser.py
