[project]
name = "einvoice-mcp"
version = "0.1.0"
description = "MCP server for German e-invoice compliance (XRechnung/ZUGFeRD)"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tim Loehr" }]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "drafthorse>=2025.2.0",
    "factur-x>=3.15",
    "lxml>=5.0",
    "defusedxml>=0.7.0",
    "reportlab>=4.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/einvoice_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring running KoSIT validator",
]

[tool.coverage.run]
omit = [
    "src/einvoice_mcp/server.py",
    "src/einvoice_mcp/__main__.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["drafthorse.*", "factur_x.*", "reportlab.*"]
ignore_missing_imports = true
